<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.main.collections.CollectionsFragment"
    tools:showIn="@layout/fragment_collections">

    <TextView
        android:id="@+id/operations_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/operations_label_text"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/operations_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_operations"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/operations_label"
        app:layout_constraintStart_toEndOf="@+id/operations_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/threads_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/threads_label_text"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/operations_label" />

    <EditText
        android:id="@+id/threads_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:hint="@string/hint_threads"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/threads_label"
        app:layout_constraintStart_toEndOf="@+id/threads_label"
        app:layout_constraintTop_toBottomOf="@+id/operations_et" />

    <ToggleButton
        android:id="@+id/button_calculation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:textOff="@string/calculation_button_name_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>